--- a/pianos.html
+++ b/pianos.html
@@ -40,7 +40,7 @@
     <section class="productWrapper">
         <div class="card" id="product0">
             <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRAVBsI3uGCoC-3Q2JySCe2SCAwQmUyOcN43w&usqp=CAU"
-                alt="" class="productImg">
+                alt="Photo of a piano" class="productImg">
             <div class="iconWrapper">
                 <img src="lib/redheart.png" alt="" class="noDisplay icon" id="product0liked">
                 <img src="lib/whiteheart.png" alt="" class="icon" id="product0like">
@@ -48,7 +48,7 @@
                 <img src="lib/removecart.png" alt="" class="noDisplay icon" id="product0carted">
             </div>
             <div class="productInfo">
-                <p class="productInfoTitle pInfo" id="product0title">Grand piano</p>
+                <p class="productInfoTitle pInfo" id="product0title">[P] Grand piano</p>
                 <p class="productInfoPrice pInfo" id="product0price">$37000</p>
                 <p class="productInfoText pInfo hide" id="product0info">This is the king of all pianos. With its long
                     steel strings,
@@ -56,7 +56,7 @@
             </div>
         </div>
         <div class="card" id="product1">
-            <img src="https://i.ytimg.com/vi/dzJOSD6x51U/hqdefault.jpg" alt="" class="productImg">
+            <img src="https://i.ytimg.com/vi/dzJOSD6x51U/hqdefault.jpg" alt="Photo of a piano" class="productImg">
             <div class="iconWrapper">
                 <img src="lib/redheart.png" alt="" class="noDisplay icon" id="product1liked">
                 <img src="lib/whiteheart.png" alt="" class="icon" id="product1like">
@@ -64,7 +64,7 @@
                 <img src="lib/removecart.png" alt="" class="noDisplay icon" id="product1carted">
             </div>
             <div class="productInfo">
-                <p class="productInfoTitle pInfo" id="product1title">Digital grand piano</p>
+                <p class="productInfoTitle pInfo" id="product1title">[P] Digital grand piano</p>
                 <p class="productInfoPrice pInfo" id="product1price">$120000</p>
                 <p class="productInfoText pInfo hide" id="product1info">
                     This piano is a mix of an accoustic grand piano and digital technology. This piano can play itself
