--- a/credits.html
+++ b/credits.html
@@ -30,6 +30,8 @@
         Pixel perfect - Flaticon</a>
     <a href="https://www.flaticon.com/free-icons/remove-from-cart" title="remove from cart icons">Remove from cart icons
         created by Pixel perfect - Flaticon</a>
+    <a href="https://www.flaticon.com/free-icons/open-menu" title="open menu icons">Open menu icons created by Pixel
+        perfect - Flaticon</a>
 </body>
 
 </html>
